--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap");
+
 * {
   box-sizing: border-box;
 }
@@ -7,8 +9,9 @@ body {
   place-items: center;
   height: 100vh;
   width: 100vw;
-  background-color: rgb(6, 75, 21);
+  background-color: hsl(212 25% 12%);
   margin: 0;
+  font-family: "Source Code Pro", monospace;
 }
 main {
   width: 100%;
@@ -17,20 +20,119 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: blue solid 2px;
+  gap: 6em;
 }
 
-.wavy {
-  border: red solid 2px;
+.option-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
 }
 
 .wavy span {
   display: inline-block;
-  color: #fff;
+  color: hsl(212 35% 58%);
   font-size: 2em;
+  font-weight: 700;
   text-transform: uppercase;
   animation: animate 2s ease-in-out infinite;
   animation-delay: calc(0.1s * var(--i));
+}
+
+.slide-container {
+  color: #9097a3;
+}
+
+#slider {
+  width: 200px;
+  height: 16px;
+  -webkit-appearance: none;
+  background: #111;
+  outline: none;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 1);
+}
+
+.range::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: hsl(212 35% 58%);
+  cursor: pointer;
+  border: 4px solid #333;
+  box-shadow: -407px 0 0 400px hsl(212 35% 58%);
+}
+.switch-container {
+  display: flex;
+  align-items: center;
+  gap: 2em;
+  color: #9097a3;
+}
+
+.switch-wrapper {
+  position: relative;
+  width: 60px;
+  height: 34px;
+  color: #9097a3;
+}
+
+.switch-wrapper input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+  display: flex;
+}
+
+/* The slider */
+.switch {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.switch:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .switch {
+  background-color: hsl(212 35% 58%);
+}
+
+input:focus + .switch {
+  box-shadow: 0 0 1px hsl(212 35% 58%);
+}
+
+input:checked + .switch:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.switch.round {
+  border-radius: 34px;
+}
+
+.switch.round:before {
+  border-radius: 50%;
 }
 
 @keyframes animate {
